Fix: Projects section on mobile

--- a/src/Content.scss
+++ b/src/Content.scss
@@ -101,13 +101,14 @@
   }
 }
 
-.projects-container {
-  display: flex;
+.container {
   background: #fff;
   padding: 10px;
   margin-bottom: 10px;
   border: 3px solid #c2c2c2;
-
+}
+.projects {
+  display: flex;
   .cc-text {
     .link-holder {
       display: inline-block;
